--- a/Final-Project/src/App.css
+++ b/Final-Project/src/App.css
@@ -1,6 +1,7 @@
 
 body{
    background-color: rgb(185, 185, 185);
+   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 button{
@@ -25,4 +26,20 @@ button{
    display: flex;
    align-items: center;
    
+}
+
+h2{
+   text-align: center;
+   text-decoration: underline;
+}
+
+.carousel-caption {
+   bottom: -10px;
+}
+
+footer {
+   text-align: center;
+   padding: 7px;
+   background-color: rgb(40, 40, 40);
+   color:aliceblue
 }
